Lavac 0.10.1   修复createDelegation的一些bug   匿名类现在可以引用this与“本地变量”了   修复Asterisk的toString函数的bug   修复错误的提示cast.warn.redundant   修复字段初始化的bug   修复lambda判断的bug   Attach加入了value以可选的手动指定覆盖的方法名称
加入自己开发的神奇的多密钥加密算法
修复slice检查index之后新增的几个bug
修复OKRouter处理/的问题
加入shorthand GetMapping和PostMapping
改动参数顺序，增加了一些Attach注解的使用
增加了TOTP验证和全新的单点登录系统
将HTTP服务器的同步发送超时修改为1小时，加入了请求限速功能，优化了read函数
修复了UPnP发现XML解析和其它bug
优化了MimeType的处理
修复Websocketd没有加锁的bug
修复DPS默认配置文件保存（和忘了更新版本号，所以我还是适合timestamp version）的bug
修复toByteArrayAndZero清空返回数组的低级错误
修复缓冲区实现有bug导致JVM崩溃